# calendar-api

./: .env_example  .gitignore  CHANGELOG.md  Makefile  cabal.project  cabal.project.freeze  calendar-api.cabal  config_example.json  flake.nix  hie.yaml
.github/scripts/: gen_env.sh  start_image.js  start_image.sh
.github/workflows/: deploy.yml
app/: App.hs  Config.hs  Controllers.hs  Db.hs  Logger.hs  Main.hs  Migrations.hs  ResponseError.hs  Settings.hs
app/Controllers/: Auth.hs  User.hs
app/Controllers/Auth/: AuthCheck.hs  JWT.hs  Password.hs  Signin.hs  Signup.hs
app/Db/: Connection.hs  Scheme.hs  Users.hs  models.persistentmodels
app/Migrations/: Migrate.hs  Users.hs
ci/: docker-compose-migrations.yaml  docker-compose.yaml  dockerfile-migrations.nix  dockerfile.nix  mk-dockerfile.nix  pkgs.nix
scripts/: format.sh  pg_start.sh  psql.sh
tests/: SigninSpec.hs  Spec.hs  Utils.hs
