cabal-version:      3.6
name:               calendar-api
version:            0.1.0.0
maintainer:         dmitrii.sk@gmail.com
author:             Dmitrii Skurihin
extra-source-files: CHANGELOG.md

executable calendar-api
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Config
        Db
        Db.Users
        Db.Connection
        Controllers
        Controllers.User
        Controllers.Auth.Signup
        Controllers.Auth.Password
        Controllers.Auth.Signin
        Controllers.Auth.JWT
        Controllers.Auth.AuthCheck
        Logger

    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        servant ^>=0.19,
        servant-server ^>=0.19,
        text,
        time,
        aeson,
        wai,
        warp,
        postgresql-simple,
        beam-core,
        beam-postgres,
        beam-migrate,
        string-interpolate,
        password,
        utf8-string,
        containers,
        email-validate,
        http-types,
        uuid-types,
        jwt ^>=0.11.0,
        lens,
        bytestring,
        cookie,
        binary,
        case-insensitive
