cabal-version:      3.6
name:               calendar-api
version:            0.1.0.0
maintainer:         dmitrii.sk@gmail.com
author:             Dmitrii Skurihin
extra-source-files: CHANGELOG.md

common deps 
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        postgresql-simple,
        beam-core,
        beam-postgres,
        beam-migrate,
        aeson,
        password,
        text,
        directory,
        filepath,
        dotenv,
        envparse,
        string-interpolate,

    other-modules:
        Db
        Db.Connection
        Db.Scheme
        Db.Users
        Config

executable calendar-api
    import: deps
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Controllers
        Controllers.User
        Controllers.Auth.Signup
        Controllers.Auth.Password
        Controllers.Auth.Signin
        Controllers.Auth.JWT
        Controllers.Auth.AuthCheck
        Logger

    build-depends:
        servant ^>=0.19,
        servant-server ^>=0.19,
        time,
        wai,
        wai-cors,
        warp,
        postgresql-simple,
        beam-core,
        beam-postgres,
        utf8-string,
        containers,
        email-validate,
        http-types,
        uuid-types,
        jwt ^>=0.11.0,
        lens,
        bytestring,
        cookie,
        binary,
        case-insensitive

executable calendar-api-migrations
    import: deps
    main-is:          Migrations.hs
    hs-source-dirs:   app
    build-depends:
        beam-migrate 
    other-modules: 
        Migrations.Users
